--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-go fxxk of your damnt website!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>用vscode写的第一个页面</title>
+</head>
+<body>
+  我可去你m的
+</body>
+</html>
