--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <p>#include stdio.h</p>
     <p>int main(){</p>
         <p>printf_s("无状态");}</p>
-    
     <h3>第二章 英雄降临！There is Java!</h3>
     <p><strong> Java？就是那杯咖啡？</strong>一直都很令人困惑，Java和咖啡为什么紧密联系在一起，Minecraft里需要的java总是一杯咖啡？</p><br />
     <p>Java是什么，能吃吗？</p>
-    
     <h3>第三章 转生在异世界的大帝居然不会web？</h3>
     <p><strong> 啊这</strong>没有太认真学习web的下场，就是忘记指令吗······<em>倾斜是怎么弄来着？</em></p><br />
     <p><ins> May be,we can start a review?</ins></p>
     <p><del>送你一张图，好家伙</del>好像不行······</p>
     <img src="self.png" alt="无法查看不是我的问题，是你的问题" title="这就是也萨卡大帝的帅照" width="200" broder="5">
+    <pr />
+    <p><a href="https://www.bilibili.com" target=self>点我即可爪巴</a></p>
     <table>
         <td> <tr>可怕</tr> <tr>离谱</tr> </td>
         <td> <tr>无语</tr> <tr>真不戳</tr> </td>
