--- a/index.html
+++ b/index.html
@@ -3,29 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>也萨卡大帝</title>
+    <title>也萨卡大帝在线中文网</title>
+    <style>
+        p {
+            color: rgb(22, 22, 22);
+        }
+        .red {
+            width: 300px;
+            height: 300px;
+            background-color: red;
+
+        }
+        .blue {
+            width: 300px;
+            height: 300px;
+            background-color: blue;
+        }
+    </style>
+        
+
 </head>
 <body>
-    <h1>也萨卡应王传说</h1>
-    <h3>第一章 开天辟地的c语言</h3>
+    <h1 style="color: magenta;" style="background: mediumorchid;">Wellcome to King Yesaka's website!</h1>
+    <ul>
+        <li style="color: gold;">也萨卡自传</li>
+        <li style="color: gold;"><a href="#biaoge">人物介绍表</a></li>
+        <li style="color: gold ;"><a href="#hl">尚在开发</a></li>
+    </ul>
+    <h2 style="color: red;">也萨卡应王传说</h1>
+    
+    <h3 style="color:lime;">第一章 开天辟地的c语言</h3>
     <p><strong> 不会c语言的程序员是没有灵魂的！</strong>虽然至今为止大帝都没学得怎么会······</p><br />
     <p>#include stdio.h</p>
     <p>int main(){</p>
         <p>printf_s("无状态");}</p>
-    <h3>第二章 英雄降临！There is Java!</h3>
+    <h3 style="color:lime;">第二章 英雄降临！There is Java!</h3>
     <p><strong> Java？就是那杯咖啡？</strong>一直都很令人困惑，Java和咖啡为什么紧密联系在一起，Minecraft里需要的java总是一杯咖啡？</p><br />
     <p>Java是什么，能吃吗？</p>
-    <h3>第三章 转生在异世界的大帝居然不会web？</h3>
+    <h3 style="color:lime;">第三章 转生在异世界的大帝居然不会web？</h3>
     <p><strong> 啊这</strong>没有太认真学习web的下场，就是忘记指令吗······<em>倾斜是怎么弄来着？</em></p><br />
     <p><ins> May be,we can start a review?</ins></p>
     <p><del>送你一张图，好家伙</del>好像不行······</p>
-    <img src="self.png" alt="无法查看不是我的问题，是你的问题" title="这就是也萨卡大帝的帅照" width="200" broder="5">
+    <img src="self.png" alt="无法查看不是我的问题，是你的问题" title="这就是也萨卡大帝的帅照" width="600" broder="5">
     <pr />
     <p><a href="https://www.bilibili.com" target=self>点我即可爪巴</a></p>
-    <table>
-        <td> <tr>可怕</tr> <tr>离谱</tr> </td>
-        <td> <tr>无语</tr> <tr>真不戳</tr> </td>
-        <td> <tr>神经</tr> <tr>有病</tr> </td>
-    </table>
+    <table border="5" style="padding: 1cm;" style="width: 1200px;" id="biaoge"> 
+        <tr>
+            <th style="color: blue;">名字</th> 
+            <th style="color: chartreuse;">性别</th>
+            <th style="color: rgb(255, 0, 242);">外貌</th>
+        </tr>
+        <tr>
+            <td>叶科夫斯基</td>
+            <td>男</td>
+            <td>韩德桑</td>
+        </tr>
+        <tr>
+            <td>也萨卡</td>
+            <td style="color: red;">error：无法识别异世界信息</td>
+            <td>异界风流人物</td>
+        </tr>
+    </table >
+    <div class="red" id="hl"></div>
+    <div class="blue"></div>
 </body>
 </html>
